syntax = "proto3";

package svc;

message AuthorizeRequest {
  string orn = 1;
  string action = 2;
}

message AuthorizeResponse {
  bool authorize = 1;
}

message CreatePolicyRequest {
  string name = 1;
  string description = 2;
  string document = 3;
}

message CreatePolicyResponse {
  bool ok = 1;
  string error = 2;
}

service Judge {
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse) {}
  rpc CreatePolicy(CreatePolicyRequest) returns (CreatePolicyResponse) {}
}
